# replay-agent-recorder

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_FILE_MANIFEST.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  concepts.md  concepts.zh-CN.md  integration-scaffold.md  integrations.md  limitations.md  original-readme-details.md  quickstart.md  quickstart.zh-CN.md  security-and-privacy.md  tool-adapter-protocol.md  visualization.md  visualization.zh-CN.md
docs/architecture/: README.md  visualization-implementation-status.md
docs/assets/: README.md
guidance/visualization/: implementation-plan.md  quickstart.md
integrations/deepagents/: README.md  __init__.py  replay_target.json  runner.py  tool_adapter.py
integrations/local_deep_researcher/: README.md  replay_target.json  runner.py
integrations/my_agent/: README.md  runner.py  (+1 more)
replay/: README.md  __init__.py  api.py  asgi.py  asyncio_patch.py  autosession.py  bootstrap.py  cli.py  codecs.py  context.py  edges.py  entrypoints.py  errors.py  filesystem_effects.py  graph_ir.py  ids.py  import_hook.py  instrument.py  integration.py  langchain_patch.py  langgraph_config.py  langgraph_patch.py  normalization.py  openai_patch.py  response.py  sandbox_manager.py  scaffold.py  scaffold_detect.py  semantic_runtime.py  storage.py  target_env.py  tool_adapters.py  tool_calls.py  tools.py  visualize.py
test_agent/: __init__.py
viewer/: index.html  vite.config.ts
(+47 files in other folders)
